[package]
name = "stakan"
version = "0.1.0"
description = "Created with Anchor"
authors = ["Yury <yury.yukhananov@tutanota.com>"]
edition = "2018"
keywords = ["solana", "anchor", "arweave", "borsch", "graphql"]
repository = "https://github.com/Retamogordo/stakan"


[lib]
crate-type = ["cdylib", "lib"]
name = "stakan"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.9.13"
